tests/specs/export_interface2.txt
# mod.ts
export interface TypedIface<T> {
    something(): T
}

# diagnostics
error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> /mod.ts:1:1
  | 
1 | export interface TypedIface<T> {
  | ^


error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> /mod.ts:2:5
  | 
2 |     something(): T
  |     ^

# output.txt
Defined in file:///mod.ts:0:1

interface TypedIface<T>

  something(): T


# output.json
{
  "symbols": [
    {
      "name": "TypedIface",
      "declarations": [
        {
          "location": {
            "filename": "file:///mod.ts",
            "line": 0,
            "col": 0,
            "byteIndex": 0
          },
          "declarationKind": "export",
          "kind": "interface",
          "def": {
            "methods": [
              {
                "name": "something",
                "kind": "method",
                "location": {
                  "filename": "file:///mod.ts",
                  "line": 1,
                  "col": 4,
                  "byteIndex": 37
                },
                "params": [],
                "returnType": {
                  "repr": "T",
                  "kind": "typeRef",
                  "value": {
                    "typeName": "T",
                    "resolution": {
                      "kind": "typeParam",
                      "declaringName": "TypedIface",
                      "declaringKind": "interface"
                    }
                  }
                }
              }
            ],
            "typeParams": [
              {
                "name": "T"
              }
            ]
          }
        }
      ]
    }
  ]
}
